--- a/activities.html
+++ b/activities.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- test commit -->
     <header>
         <div class="logo">
             <img src="images/mpp-logo.png" alt="MPP UTHM Logo">
