--- a/upcoming.html
+++ b/upcoming.html
@@ -97,4 +97,181 @@
                     <div class="program-content">
                         <h3>Annual Sports Day</h3>
                         <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 8:00
+                            <span><i class="fas fa-clock"></i> 8:00 AM - 6:00 PM</span>
+                            <span><i class="fas fa-map-marker-alt"></i> UTHM Sports Complex</span>
+                        </div>
+                        <p>Competitions in football, basketball, badminton and more. Register your team now!</p>
+                        <div class="program-actions">
+                            <button class="register-btn" data-program="Annual Sports Day">Register Now</button>
+                            <a href="#" class="program-details">Details</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="program-card community">
+                    <div class="program-image">
+                        <img src="images/upcoming3.jpg" alt="Community Service">
+                        <div class="program-date">
+                            <span class="day">29</span>
+                            <span class="month">Jul</span>
+                        </div>
+                    </div>
+                    <div class="program-content">
+                        <h3>Community Service</h3>
+                        <div class="program-meta">
+                            <span><i class="fas fa-clock"></i> 8:00 AM - 12:00 PM</span>
+                            <span><i class="fas fa-map-marker-alt"></i> Local Orphanage</span>
+                        </div>
+                        <p>Volunteer opportunity to give back to the community. Limited slots available.</p>
+                        <div class="program-actions">
+                            <button class="register-btn" data-program="Community Service">Register Now</button>
+                            <a href="#" class="program-details">Details</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="program-card workshop">
+                    <div class="program-image">
+                        <img src="images/upcoming4.jpg" alt="Career Workshop">
+                        <div class="program-date">
+                            <span class="day">05</span>
+                            <span class="month">Aug</span>
+                        </div>
+                    </div>
+                    <div class="program-content">
+                        <h3>Career Preparation Workshop</h3>
+                        <div class="program-meta">
+                            <span><i class="fas fa-clock"></i> 2:00 PM - 5:00 PM</span>
+                            <span><i class="fas fa-map-marker-alt"></i> Career Center</span>
+                        </div>
+                        <p>Learn resume writing, interview skills and career planning from HR professionals.</p>
+                        <div class="program-actions">
+                            <button class="register-btn" data-program="Career Preparation Workshop">Register Now</button>
+                            <a href="#" class="program-details">Details</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="program-card sports">
+                    <div class="program-image">
+                        <img src="images/upcoming5.jpg" alt="E-Sports Tournament">
+                        <div class="program-date">
+                            <span class="day">12</span>
+                            <span class="month">Aug</span>
+                        </div>
+                    </div>
+                    <div class="program-content">
+                        <h3>E-Sports Tournament</h3>
+                        <div class="program-meta">
+                            <span><i class="fas fa-clock"></i> 10:00 AM - 10:00 PM</span>
+                            <span><i class="fas fa-map-marker-alt"></i> Student Center</span>
+                        </div>
+                        <p>Compete in Mobile Legends and PUBG tournaments with cash prizes for winners.</p>
+                        <div class="program-actions">
+                            <button class="register-btn" data-program="E-Sports Tournament">Register Now</button>
+                            <a href="#" class="program-details">Details</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="program-card community">
+                    <div class="program-image">
+                        <img src="images/upcoming6.jpg" alt="Cultural Night">
+                        <div class="program-date">
+                            <span class="day">19</span>
+                            <span class="month">Aug</span>
+                        </div>
+                    </div>
+                    <div class="program-content">
+                        <h3>Cultural Night</h3>
+                        <div class="program-meta">
+                            <span><i class="fas fa-clock"></i> 7:00 PM - 11:00 PM</span>
+                            <span><i class="fas fa-map-marker-alt"></i> UTHM Auditorium</span>
+                        </div>
+                        <p>Celebrate Malaysia's diverse cultures through performances, food and exhibitions.</p>
+                        <div class="program-actions">
+                            <button class="register-btn" data-program="Cultural Night">Register Now</button>
+                            <a href="#" class="program-details">Details</a>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- Registration Modal -->
+        <div id="registration-modal" class="modal">
+            <div class="modal-content">
+                <span class="close-btn">&times;</span>
+                <h2 id="modal-title">Program Registration</h2>
+                <form id="registration-form">
+                    <input type="hidden" id="program-name">
+                    <div class="form-group">
+                        <label for="name">Full Name:</label>
+                        <input type="text" id="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="student-id">Student ID:</label>
+                        <input type="text" id="student-id" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone Number:</label>
+                        <input type="tel" id="phone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="faculty">Faculty:</label>
+                        <select id="faculty" required>
+                            <option value="">Select Faculty</option>
+                            <option value="Engineering">Engineering</option>
+                            <option value="Science">Science</option>
+                            <option value="Technology">Technology</option>
+                            <option value="Business">Business</option>
+                            <option value="Education">Education</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="notes">Additional Notes (optional):</label>
+                        <textarea id="notes" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Submit Registration</button>
+                </form>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>About MPP UTHM</h3>
+                <p>The Student Representative Council of Universiti Tun Hussein Onn Malaysia.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="council.html">Council Members</a></li>
+                    <li><a href="upcoming.html">Events</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Connect With Us</h3>
+                <div class="social-icons">
+                    <a href="https://www.instagram.com/mpputhm_official/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 MPP UTHM. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script>
+</body>
+</html>
