--- a/upcoming.html
+++ b/upcoming.html
@@ -56,146 +56,180 @@
 
     <main>
         <section class="programs-section">
-            <div class="program-filter">
-                <button class="filter-btn active" data-filter="all">All Programs</button>
-                <button class="filter-btn" data-filter="workshop">Workshops</button>
-                <button class="filter-btn" data-filter="sports">Sports</button>
-                <button class="filter-btn" data-filter="community">Community</button>
+            
+
+<div class="programs-grid">
+
+    <article class="program-card workshop">
+        <div class="program-content">
+            <h3>HR Innovate</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 8:00 PM - 10:30 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Online</span>
             </div>
+            <p>UniSZA with collaboration of MPP</p>
+        </div>
+    </article>
 
-            <div class="programs-grid">
-                <article class="program-card workshop">
-                    <div class="program-image">
-                        <img src="images/upcoming1.jpg" alt="Leadership Workshop">
-                        <div class="program-date">
-                            <span class="day">15</span>
-                            <span class="month">Jul</span>
-                        </div>
-                    </div>
-                    <div class="program-content">
-                        <h3>Leadership Workshop</h3>
-                        <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 9:00 AM - 5:00 PM</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Dewan Sultan Ibrahim</span>
-                        </div>
-                        <p>Develop essential leadership skills with industry experts. Open to all students.</p>
-                        <div class="program-actions">
-                            <button class="register-btn" data-program="Leadership Workshop">Register Now</button>
-                            <a href="#" class="program-details">Details</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="program-card sports">
-                    <div class="program-image">
-                        <img src="images/upcoming2.jpg" alt="Sports Day">
-                        <div class="program-date">
-                            <span class="day">22</span>
-                            <span class="month">Jul</span>
-                        </div>
-                    </div>
-                    <div class="program-content">
-                        <h3>Annual Sports Day</h3>
-                        <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 8:00 AM - 6:00 PM</span>
-                            <span><i class="fas fa-map-marker-alt"></i> UTHM Sports Complex</span>
-                        </div>
-                        <p>Competitions in football, basketball, badminton and more. Register your team now!</p>
-                        <div class="program-actions">
-                            <button class="register-btn" data-program="Annual Sports Day">Register Now</button>
-                            <a href="#" class="program-details">Details</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="program-card community">
-                    <div class="program-image">
-                        <img src="images/upcoming3.jpg" alt="Community Service">
-                        <div class="program-date">
-                            <span class="day">29</span>
-                            <span class="month">Jul</span>
-                        </div>
-                    </div>
-                    <div class="program-content">
-                        <h3>Community Service</h3>
-                        <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 8:00 AM - 12:00 PM</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Local Orphanage</span>
-                        </div>
-                        <p>Volunteer opportunity to give back to the community. Limited slots available.</p>
-                        <div class="program-actions">
-                            <button class="register-btn" data-program="Community Service">Register Now</button>
-                            <a href="#" class="program-details">Details</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="program-card workshop">
-                    <div class="program-image">
-                        <img src="images/upcoming4.jpg" alt="Career Workshop">
-                        <div class="program-date">
-                            <span class="day">05</span>
-                            <span class="month">Aug</span>
-                        </div>
-                    </div>
-                    <div class="program-content">
-                        <h3>Career Preparation Workshop</h3>
-                        <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 2:00 PM - 5:00 PM</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Career Center</span>
-                        </div>
-                        <p>Learn resume writing, interview skills and career planning from HR professionals.</p>
-                        <div class="program-actions">
-                            <button class="register-btn" data-program="Career Preparation Workshop">Register Now</button>
-                            <a href="#" class="program-details">Details</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="program-card sports">
-                    <div class="program-image">
-                        <img src="images/upcoming5.jpg" alt="E-Sports Tournament">
-                        <div class="program-date">
-                            <span class="day">12</span>
-                            <span class="month">Aug</span>
-                        </div>
-                    </div>
-                    <div class="program-content">
-                        <h3>E-Sports Tournament</h3>
-                        <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 10:00 AM - 10:00 PM</span>
-                            <span><i class="fas fa-map-marker-alt"></i> Student Center</span>
-                        </div>
-                        <p>Compete in Mobile Legends and PUBG tournaments with cash prizes for winners.</p>
-                        <div class="program-actions">
-                            <button class="register-btn" data-program="E-Sports Tournament">Register Now</button>
-                            <a href="#" class="program-details">Details</a>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="program-card community">
-                    <div class="program-image">
-                        <img src="images/upcoming6.jpg" alt="Cultural Night">
-                        <div class="program-date">
-                            <span class="day">19</span>
-                            <span class="month">Aug</span>
-                        </div>
-                    </div>
-                    <div class="program-content">
-                        <h3>Cultural Night</h3>
-                        <div class="program-meta">
-                            <span><i class="fas fa-clock"></i> 7:00 PM - 11:00 PM</span>
-                            <span><i class="fas fa-map-marker-alt"></i> UTHM Auditorium</span>
-                        </div>
-                        <p>Celebrate Malaysia's diverse cultures through performances, food and exhibitions.</p>
-                        <div class="program-actions">
-                            <button class="register-btn" data-program="Cultural Night">Register Now</button>
-                            <a href="#" class="program-details">Details</a>
-                        </div>
-                    </div>
-                </article>
+    <article class="program-card workshop">
+        <div class="program-content">
+            <h3>Majlis Anugerah Dekan FSTKM</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 8:00 AM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Dewan Kuliah A, G3</span>
             </div>
+            <p>MPP co-organized with FSKTM and ITC</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>#HusseinSantai</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 3:00 PM - 11:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Kafeteria PHEP</span>
+            </div>
+            <p>PHEP with collaboration of PTU, PSKU, and MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>PEKERTI</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 8:00 AM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> PUMAS</span>
+            </div>
+            <p>PHEP with collaboration of MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card workshop">
+        <div class="program-content">
+            <h3>ROBOCON</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 8:00 AM - 11:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> DSI</span>
+            </div>
+            <p>FKEE with collaboration of FTK, KKE, ETeC, and MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card workshop">
+        <div class="program-content">
+            <h3>Majlis Anugerah Dekan FPTP</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 8:00 AM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> BIG STAGE, PTTA</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>Karnival Hussein Sihat 2025</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 7:30 AM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Dewan Terbuka</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>#HusseinPrihatin AmalSpace</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 3:00 PM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Dataran Terbuka</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>#HusseinPrihatin Hulur Tangan</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 3:00 PM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Dataran Terbuka</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>Karnival Marhabbah Komuniti Madani</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 6:00 AM - 9:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Masjid Sultan Ibrahim</span>
+            </div>
+            <p>Organized by Pusat Islam</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>Speaker Corner</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 6:30 PM - 9:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> KKDK (Tun Fatimah)</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card workshop">
+        <div class="program-content">
+            <h3>Pitching</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 2:00 PM - 5:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Bilik Mesyuarat, PHEP</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card workshop">
+        <div class="program-content">
+            <h3>Majlis Anugerah Pelajar Tahun Akhir dan Dekan FKEE</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 8:00 PM - 11:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Barokah Seri Village</span>
+            </div>
+            <p>FKEE with collaboration of MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card community">
+        <div class="program-content">
+            <h3>Menyingkap Palestine</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 7:00 PM - 11:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Musolla, KKKP</span>
+            </div>
+            <p>Organized by MPP</p>
+        </div>
+    </article>
+
+    <article class="program-card sports">
+        <div class="program-content">
+            <h3>#Husseinaktif: Foam Mania Run 2025</h3>
+            <div class="program-meta">
+                <span><i class="fas fa-clock"></i> 7:00 AM - 12:00 PM</span>
+                <span><i class="fas fa-map-marker-alt"></i> Kolej Kediaman Pagoh</span>
+            </div>
+            <p>MPP with collaboration of Klinik Pergigian Putra</p>
+        </div>
+    </article>
+
+</div>
+
+
+</div>
+
         </section>
 
         <!-- Registration Modal -->
