--- a/past-activities.html
+++ b/past-activities.html
@@ -56,105 +56,64 @@
 
     <main>
         <section class="past-activities-section">
-            <div class="year-filter">
-                <button class="year-btn active" data-year="all">All Years</button>
-                <button class="year-btn" data-year="2023">2023</button>
-                <button class="year-btn" data-year="2022">2022</button>
-                <button class="year-btn" data-year="2021">2021</button>
-            </div>
+    
 
             <div class="activities-timeline">
-                <div class="timeline-item" data-year="2023">
-                    <div class="timeline-date">May 2023</div>
-                    <div class="timeline-content">
-                        <h3>Leadership Workshop</h3>
-                        <div class="timeline-image">
-                            <img src="images/past1.jpg" alt="Leadership Workshop">
-                        </div>
-                        <p>150 students participated in our intensive 3-day leadership development program featuring industry experts and team-building activities.</p>
-                        <div class="timeline-stats">
-                            <span><i class="fas fa-users"></i> 150 Participants</span>
-                            <span><i class="fas fa-star"></i> 4.8/5 Rating</span>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="timeline-item" data-year="2023">
-                    <div class="timeline-date">April 2023</div>
-                    <div class="timeline-content">
-                        <h3>Community Service at Orphanage</h3>
-                        <div class="timeline-image">
-                            <img src="images/past2.jpg" alt="Orphanage Visit">
-                        </div>
-                        <p>Monthly visit to local orphanage where we conducted activities, donated supplies and spent time with the children.</p>
-                        <div class="timeline-stats">
-                            <span><i class="fas fa-users"></i> 50 Volunteers</span>
-                            <span><i class="fas fa-gift"></i> RM2000 Donated</span>
-                        </div>
-                    </div>
-                </div>
+    <div class="timeline-item" data-year="2025">
+        <div class="timeline-date">June 2025</div>
+        <div class="timeline-content">
+            <h3>HR Innovate</h3>
+            <p>Online workshop organized by UniSZA in collaboration with MPP.</p>
+            <div class="timeline-stats">
+                <span><i class="fas fa-users"></i> 120 Participants</span>
+                <span><i class="fas fa-star"></i> 4.9/5 Rating</span>
+            </div>
+        </div>
+    </div>
 
-                <div class="timeline-item" data-year="2023">
-                    <div class="timeline-date">March 2023</div>
-                    <div class="timeline-content">
-                        <h3>Inter-University Debate Competition</h3>
-                        <div class="timeline-image">
-                            <img src="images/past3.jpg" alt="Debate Competition">
-                        </div>
-                        <p>Our debate team won 1st place in the national inter-university debate competition, bringing pride to UTHM.</p>
-                        <div class="timeline-stats">
-                            <span><i class="fas fa-trophy"></i> 1st Place</span>
-                            <span><i class="fas fa-university"></i> 12 Universities</span>
-                        </div>
-                    </div>
-                </div>
+    <div class="timeline-item" data-year="2025">
+        <div class="timeline-date">June 2025</div>
+        <div class="timeline-content">
+            <h3>Majlis Anugerah Dekan FSTKM</h3>
+            <p>Event held at Dewan Kuliah A, G3 — organized by MPP, FSKTM and ITC.</p>
+            <div class="timeline-stats">
+                <span><i class="fas fa-users"></i> 250 Attendees</span>
+                <span><i class="fas fa-trophy"></i> 45 Awardees</span>
+            </div>
+        </div>
+    </div>
 
-                <div class="timeline-item" data-year="2022">
-                    <div class="timeline-date">November 2022</div>
-                    <div class="timeline-content">
-                        <h3>Annual Sports Day</h3>
-                        <div class="timeline-image">
-                            <img src="images/past4.jpg" alt="Sports Day">
-                        </div>
-                        <p>Successful sports competition with over 300 participants across 10 different sports categories.</p>
-                        <div class="timeline-stats">
-                            <span><i class="fas fa-users"></i> 300 Participants</span>
-                            <span><i class="fas fa-medal"></i> 15 Events</span>
-                        </div>
-                    </div>
-                </div>
+    <div class="timeline-item" data-year="2025">
+        <div class="timeline-date">June 2025</div>
+        <div class="timeline-content">
+            <h3>#HusseinSantai</h3>
+            <p>Casual evening at Kafeteria PHEP with PTU, PSKU and MPP collaboration.</p>
+            <div class="timeline-stats">
+                <span><i class="fas fa-users"></i> 180 Participants</span>
+                <span><i class="fas fa-music"></i> 10 Performances</span>
+            </div>
+        </div>
+    </div>
 
-                <div class="timeline-item" data-year="2022">
-                    <div class="timeline-date">August 2022</div>
-                    <div class="timeline-content">
-                        <h3>Blood Donation Campaign</h3>
-                        <div class="timeline-image">
-                            <img src="images/past5.jpg" alt="Blood Donation">
-                        </div>
-                        <p>Collected 200 pints of blood for hospital blood banks through our biannual donation drive.</p>
-                        <div class="timeline-stats">
-                            <span><i class="fas fa-tint"></i> 200 Pints</span>
-                            <span><i class="fas fa-users"></i> 180 Donors</span>
-                        </div>
-                    </div>
-                </div>
+    <div class="timeline-item" data-year="2025">
+        <div class="timeline-date">June 2025</div>
+        <div class="timeline-content">
+            <h3>PEKERTI</h3>
+            <p>Training program held at PUMAS, organized by PHEP with MPP.</p>
+            <div class="timeline-stats">
+                <span><i class="fas fa-users"></i> 95 Participants</span>
+                <span><i class="fas fa-chalkboard-teacher"></i> 6 Sessions</span>
+            </div>
+        </div>
+    </div>
 
-                <div class="timeline-item" data-year="2021">
-                    <div class="timeline-date">December 2021</div>
-                    <div class="timeline-content">
-                        <h3>Cultural Night</h3>
-                        <div class="timeline-image">
-                            <img src="images/past6.jpg" alt="Cultural Night">
-                        </div>
-                        <p>Celebration of Malaysia's diverse cultures through performances, food and exhibitions attended by 500 people.</p>
-                        <div class="timeline-stats">
-                            <span><i class="fas fa-users"></i> 500 Attendees</span>
-                            <span><i class="fas fa-utensils"></i> 15 Food Stalls</span>
-                        </div>
-                    </div>
-                </div>
+</div>
+
             </div>
         </section>
+
+        
     </main>
 
     <footer>
