--- a/vision-mission.html
+++ b/vision-mission.html
@@ -61,22 +61,16 @@
                     <div class="vm-icon">
                         <i class="fas fa-eye"></i>
                     </div>
-                    <h2>Vision</h2>
-                    <p>"To be an excellent and respected student representative body that upholds student welfare and develops future leaders."</p>
+                    <h2>Visi</h2>
+                    <p style="text-align: justify;">"Menjulang tekad agenda pemerkasaan mahasiswa sebahaia pemegang taruh terpenting universiti"</p>
                 </div>
 
                 <div class="mission-card vm-card">
                     <div class="vm-icon">
                         <i class="fas fa-bullseye"></i>
                     </div>
-                    <h2>Mission</h2>
-                    <ul class="mission-list">
-                        <li><i class="fas fa-check"></i> Represent student voices effectively to the university administration</li>
-                        <li><i class="fas fa-check"></i> Organize programs that develop student leadership and soft skills</li>
-                        <li><i class="fas fa-check"></i> Maintain good relations between students and university management</li>
-                        <li><i class="fas fa-check"></i> Uphold student welfare and rights</li>
-                        <li><i class="fas fa-check"></i> Foster unity among students from diverse backgrounds</li>
-                    </ul>
+                    <h2>Misi</h2>
+                    <p style="text-align: justify;">"Mengangkat nilai kepimpinan dan dedikasi dalam segenap aspek seperti pembangunan pelajar, pengurusan strategik dan integriti kewangan"</p>
                 </div>
             </div>
 
