--- a/past-activities.html
+++ b/past-activities.html
@@ -21,32 +21,39 @@
             </div>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="profile.html">MPP Profile <i class="fas fa-chevron-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="council.html">Council Members</a></li>
-                        <li><a href="vision-mission.html">Vision & Mission</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="activities.html">Activities <i class="fas fa-chevron-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="upcoming.html">Upcoming Programs</a></li>
-                        <li class="active"><a href="past-activities.html">Past Activities</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="services.html">Services <i class="fas fa-chevron-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="feedback.html">Feedback</a></li>
-                        <li><a href="complaints.html">Complaints</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">Contact Us</a></li>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+            <a href="profile.html">MPP Profile <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="council.html">Council Members</a></li>
+                <li><a href="vision-mission.html">Vision & Mission</a></li>
             </ul>
-        </nav>
+        </li>
+        <li class="dropdown">
+            <a href="activities.html">Activities <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="upcoming.html">Upcoming Programs</a></li>
+                <li><a href="past-activities.html">Past Activities</a></li>
+            </ul>
+        </li>
+        <li class="dropdown active">
+            <a href="gallery.html">Gallery <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="program-media-lens.html">Program Media Lens</a></li>
+                <li><a href="appreciation.html">Appreciation</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a href="services.html">Services <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="complaints.html">Complaints</a></li>
+            </ul>
+        </li>
+        <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+</nav>
     </header>
 
     <div class="page-header">
