--- a/vision-mission.html
+++ b/vision-mission.html
@@ -54,64 +54,120 @@
         <p>Our guiding principles and objectives</p>
     </div>
 
-    <main>
-        <section class="vision-mission-section">
-            <div class="vm-container">
-                <div class="vision-card vm-card">
-                    <div class="vm-icon">
-                        <i class="fas fa-eye"></i>
+    <main id="main-content">
+        <section class="vision-mission-section" aria-labelledby="vm-heading">
+            <div class="container">
+                <h2 id="vm-heading" class="sr-only">Our Vision and Mission</h2>
+                
+                <div class="vm-container">
+                    <div class="vision-card vm-card" tabindex="0">
+                        <div class="vm-icon" aria-hidden="true">
+                            <i class="fas fa-eye"></i>
+                        </div>
+                        <h3>Vision</h3>
+<blockquote style="text-align: center;">
+    "Menjulang tekad agenda pemerkasaan mahasiswa sebagai pemegang taruh terpenting universiti"
+</blockquote>
+
+<blockquote style="font-style: italic; text-align: center;">
+    "Elevating the agenda of student empowerment as the most important stakeholder of the university"
+</blockquote>
+
                     </div>
-                    <h2>Visi</h2>
-                    <p style="text-align: justify;">"Menjulang tekad agenda pemerkasaan mahasiswa sebahaia pemegang taruh terpenting universiti"</p>
+
+                    <div class="mission-card vm-card" tabindex="0">
+                        <div class="vm-icon" aria-hidden="true">
+                            <i class="fas fa-bullseye"></i>
+                        </div>
+                        <h3>Mission</h3>
+
+<blockquote style="text-align: center;">
+    "Mengangkat nilai kepimpinan dan dedikasi dalam segenap aspek<br>
+    seperti pembangunan pelajar, pengurusan strategik dan integriti kewangan"
+</blockquote>
+
+<blockquote style="font-style: italic; text-align: center;">
+    "Elevating leadership values and dedication in all aspects such as student development,<br>
+    strategic management and financial integrity"
+</blockquote>
+
+                    </div>
                 </div>
 
-                <div class="mission-card vm-card">
-                    <div class="vm-icon">
-                        <i class="fas fa-bullseye"></i>
+                <div class="objectives-section" aria-labelledby="objectives-heading">
+                    <h2 id="objectives-heading" class="section-title">Our Strategic Objectives</h2>
+                    <p class="section-intro">These objectives guide our daily operations and long-term planning to serve UTHM students effectively.</p>
+                    
+                    <div class="objectives-grid">
+                        <div class="objective-card" tabindex="0">
+                            <div class="objective-icon" aria-hidden="true">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <h3>Student Representation</h3>
+                            <p>Serve as the official channel between students and university administration, ensuring student voices are heard in decision-making processes.</p>
+                        </div>
+                        <div class="objective-card" tabindex="0">
+                            <div class="objective-icon" aria-hidden="true">
+                                <i class="fas fa-hand-holding-heart"></i>
+                            </div>
+                            <h3>Welfare Protection</h3>
+                            <p>Protect and promote student welfare and interests through advocacy, support services, and policy recommendations.</p>
+                        </div>
+                        <div class="objective-card" tabindex="0">
+                            <div class="objective-icon" aria-hidden="true">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <h3>Leadership Development</h3>
+                            <p>Develop leadership qualities among students through training programs, workshops, and practical experiences.</p>
+                        </div>
+                        <div class="objective-card" tabindex="0">
+                            <div class="objective-icon" aria-hidden="true">
+                                <i class="fas fa-calendar-alt"></i>
+                            </div>
+                            <h3>Quality Programs</h3>
+                            <p>Organize beneficial academic, recreational, and cultural programs that contribute to holistic student development.</p>
+                        </div>
+                        <div class="objective-card" tabindex="0">
+                            <div class="objective-icon" aria-hidden="true">
+                                <i class="fas fa-university"></i>
+                            </div>
+                            <h3>University Relations</h3>
+                            <p>Maintain positive and constructive relations with university management while advocating for student needs.</p>
+                        </div>
+                        <div class="objective-card" tabindex="0">
+                            <div class="objective-icon" aria-hidden="true">
+                                <i class="fas fa-hands-helping"></i>
+                            </div>
+                            <h3>Community Engagement</h3>
+                            <p>Engage with the local community through service projects that benefit both students and the surrounding area.</p>
+                        </div>
                     </div>
-                    <h2>Misi</h2>
-                    <p style="text-align: justify;">"Mengangkat nilai kepimpinan dan dedikasi dalam segenap aspek seperti pembangunan pelajar, pengurusan strategik dan integriti kewangan"</p>
                 </div>
-            </div>
 
-            <div class="objectives-section">
-                <h2 class="section-title">Our Objectives</h2>
-                <div class="objectives-grid">
-                    <div class="objective-card">
-                        <i class="fas fa-users"></i>
-                        <h3>Student Representation</h3>
-                        <p>Serve as the official channel between students and university administration</p>
-                    </div>
-                    <div class="objective-card">
-                        <i class="fas fa-hand-holding-heart"></i>
-                        <h3>Welfare Protection</h3>
-                        <p>Protect and promote student welfare and interests</p>
-                    </div>
-                    <div class="objective-card">
-                        <i class="fas fa-graduation-cap"></i>
-                        <h3>Leadership Development</h3>
-                        <p>Develop leadership qualities among students</p>
-                    </div>
-                    <div class="objective-card">
-                        <i class="fas fa-calendar-alt"></i>
-                        <h3>Quality Programs</h3>
-                        <p>Organize beneficial programs for student development</p>
-                    </div>
-                    <div class="objective-card">
-                        <i class="fas fa-university"></i>
-                        <h3>University Relations</h3>
-                        <p>Maintain good relations with university management</p>
-                    </div>
-                    <div class="objective-card">
-                        <i class="fas fa-hands-helping"></i>
-                        <h3>Community Engagement</h3>
-                        <p>Engage with the local community through service projects</p>
+                <div class="core-values" aria-labelledby="values-heading">
+                    <h2 id="values-heading" class="section-title">Our Core Values</h2>
+                    <div class="values-list">
+                        <div class="value-item">
+                            <h3>Integrity</h3>
+                            <p>We maintain the highest ethical standards in all our actions and decisions.</p>
+                        </div>
+                        <div class="value-item">
+                            <h3>Transparency</h3>
+                            <p>We operate openly with clear communication about our activities and finances.</p>
+                        </div>
+                        <div class="value-item">
+                            <h3>Inclusivity</h3>
+                            <p>We represent and serve all students regardless of background or affiliation.</p>
+                        </div>
+                        <div class="value-item">
+                            <h3>Innovation</h3>
+                            <p>We continuously seek creative solutions to improve student life at UTHM.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
     <footer>
         <div class="footer-content">
             <div class="footer-section">
