--- a/program-media-lens.html
+++ b/program-media-lens.html
@@ -51,15 +51,18 @@
     </div>
 
     <main>
-        <section class="gallery-section">
-            <div class="gallery-grid">
-                <img src="images/program1.jpg" alt="Program Image 1" />
-                <img src="images/program2.jpg" alt="Program Image 2" />
-                <img src="images/program3.jpg" alt="Program Image 3" />
-                <img src="images/program4.jpg" alt="Program Image 4" />
-            </div>
-        </section>
+	<section class="gallery-section">
+		<div class="gallery-container">
+			<div class="gallery-grid">
+				<img src="images/program1.jpg" alt="Program Image 1" />
+				<img src="images/program2.jpg" alt="Program Image 2" />
+				<img src="images/program3.jpg" alt="Program Image 3" />
+				<img src="images/program4.jpg" alt="Program Image 4" />
+			</div>
+		</div>
+	</section>
     </main>
+
 
     <footer>
         <div class="footer-content">
@@ -87,7 +90,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 MPP UTHM. All Rights Reserved.</p>
+            <p>&copy; 2024/2025 MPP UTHM. All Rights Reserved.</p>
         </div>
     </footer>
 
