--- a/council.html
+++ b/council.html
@@ -456,6 +456,6 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 MPP UTHM. All Rights Reserved.</p>
+            <p>&copy; 2024/2025 MPP UTHM. All Rights Reserved.</p>
         </div>
     </footer>
