--- a/services.html
+++ b/services.html
@@ -103,7 +103,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 MPP UTHM. All Rights Reserved.</p>
+        <p>&copy; 2024/2025 MPP UTHM. All Rights Reserved.</p>
     </footer>
 
     <script src="js/script.js"></script>
