--- a/upcoming.html
+++ b/upcoming.html
@@ -309,7 +309,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 MPP UTHM. All Rights Reserved.</p>
+            <p>&copy; 2024/2025 MPP UTHM. All Rights Reserved.</p>
         </div>
     </footer>
 
