--- a/appreciation.html
+++ b/appreciation.html
@@ -53,10 +53,10 @@
     <main>
         <section class="gallery-section">
             <div class="gallery-grid">
-                <img src="images/appreciation1.jpg" alt="Appreciation Image 1" />
-                <img src="images/appreciation2.jpg" alt="Appreciation Image 2" />
-                <img src="images/appreciation3.jpg" alt="Appreciation Image 3" />
-                <img src="images/appreciation4.jpg" alt="Appreciation Image 4" />
+                <img src="images/appreciation1.jpeg" alt="Appreciation Image 1" />
+                <img src="images/appreciation2.jpeg" alt="Appreciation Image 2" />
+                <img src="images/appreciation3.jpeg" alt="Appreciation Image 3" />
+                <img src="images/appreciation4.jpeg" alt="Appreciation Image 4" />
             </div>
         </section>
     </main>
